--- a/LuggageTrackerTool2/src/view/RegistrationPassenger.form
+++ b/LuggageTrackerTool2/src/view/RegistrationPassenger.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <NonVisualComponents>
     <Component class="javax.swing.JToggleButton" name="jToggleButton1">
       <Properties>
@@ -72,49 +72,62 @@
                           </Group>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="PAIR_PASSENGER_LUGGAGE" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="REGISTER" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="MALE_BUTTON" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="FEMALE_BUTTON" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                  </Group>
-                  <Component id="ADDITIONAL_OPTIONS_TITLE" min="-2" max="-2" attributes="0"/>
-                  <Component id="BASIC_INFORMATION_TITLE" min="-2" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="HOME_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="DATE_OF_BIRTH_INPUT" min="-2" pref="156" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="DD_MM_YYYY" min="-2" pref="94" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="PAIR_PASSENGER_LUGGAGE" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="REGISTER" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="MALE_BUTTON" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="FEMALE_BUTTON" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" attributes="0">
+                                      <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
+                                      <Component id="EQUALCHECKBOX" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <EmptySpace min="-2" pref="119" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="NAME_INPUT" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="SURNAME_TUSSENVOEGSEL_INPUT" min="-2" pref="72" max="-2" attributes="0"/>
-                              <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="SURNAME_INPUT" min="-2" pref="166" max="-2" attributes="0"/>
+                              <Component id="TEMP_COUNTRY_INPUT" min="-2" pref="256" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="TEMP_POSTAL_CODE_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="TEMP_STREET_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="TEMP_CITY_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="HOME_POSTAL_CODE_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="HOME_STREET_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="HOME_CITY_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="HOME_COUNTRY_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="HOME_PHONE_NUMBER_INPUT" alignment="0" max="32767" attributes="0"/>
-                          <Component id="MOBILE_PHONE_NUMBER_INPUT" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="189" max="-2" attributes="0"/>
-                      <Component id="TEMP_COUNTRY_INPUT" min="-2" pref="259" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="ADDITIONAL_OPTIONS_TITLE" min="-2" max="-2" attributes="0"/>
+                          <Component id="BASIC_INFORMATION_TITLE" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="HOME_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <Component id="DATE_OF_BIRTH_INPUT" min="-2" pref="156" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Component id="DD_MM_YYYY" min="-2" pref="94" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="NAME_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Component id="SURNAME_TUSSENVOEGSEL_INPUT" min="-2" pref="72" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="SURNAME_INPUT" min="-2" pref="166" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="TEMP_POSTAL_CODE_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="TEMP_STREET_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="TEMP_CITY_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="HOME_POSTAL_CODE_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="HOME_STREET_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="HOME_CITY_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="HOME_COUNTRY_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="HOME_PHONE_NUMBER_INPUT" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="MOBILE_PHONE_NUMBER_INPUT" alignment="0" max="32767" attributes="0"/>
+                              </Group>
+                          </Group>
+                      </Group>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -182,7 +195,10 @@
                   <Component id="HOME_POSTAL_CODE_INPUT" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="TEMPORARY_ADDRESS_TITLE" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="TEMPORARY_ADDRESS_TITLE" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="EQUALCHECKBOX" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="TEMP_COUNTRY" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -321,6 +337,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="HOME_COUNTRY_INPUTActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="HOME_CITY">
       <Properties>
@@ -367,6 +386,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <BindingProperties>
+        <BindingProperty name="enabled" source="EQUALCHECKBOX" sourcePath="${!selected}" target="TEMP_COUNTRY_INPUT" targetPath="enabled" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
     </Component>
     <Component class="javax.swing.JLabel" name="TEMP_CITY">
       <Properties>
@@ -374,6 +396,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="TEMP_CITY_INPUT">
+      <BindingProperties>
+        <BindingProperty name="enabled" source="EQUALCHECKBOX" sourcePath="${!selected}" target="TEMP_CITY_INPUT" targetPath="enabled" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
     </Component>
     <Component class="javax.swing.JLabel" name="TEMP_STREET">
       <Properties>
@@ -381,6 +406,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="TEMP_STREET_INPUT">
+      <BindingProperties>
+        <BindingProperty name="enabled" source="EQUALCHECKBOX" sourcePath="${!selected}" target="TEMP_STREET_INPUT" targetPath="enabled" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
     </Component>
     <Component class="javax.swing.JLabel" name="TEMP_POSTAL_CODE">
       <Properties>
@@ -388,6 +416,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="TEMP_POSTAL_CODE_INPUT">
+      <BindingProperties>
+        <BindingProperty name="enabled" source="EQUALCHECKBOX" sourcePath="${!selected}" target="TEMP_POSTAL_CODE_INPUT" targetPath="enabled" updateStrategy="0" immediately="false"/>
+      </BindingProperties>
     </Component>
     <Component class="javax.swing.JLabel" name="ADDITIONAL_OPTIONS_TITLE">
       <Properties>
@@ -426,6 +457,15 @@
       <Properties>
         <Property name="columns" type="int" value="3"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="EQUALCHECKBOX">
+      <Properties>
+        <Property name="selected" type="boolean" value="true"/>
+        <Property name="text" type="java.lang.String" value="Same as Home Address"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EQUALCHECKBOXActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
